--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@ title: Homepage
 
   <br />
   <br />
-      <h2 align="left">Abstract</h2>
+  <h2 align="left">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Abstract</h2>
+
+<br />
   
   This project attempted to predict the season batting average of MLB players using their previous year's statistics. This is primarily motivated by the fact that season batting average is commonly used as a standard performance metric and being able to accurately predict that stat could allow managers to better asses which players are valuable to keep or sign, and which should be let go. 
 
