--- a/index.html
+++ b/index.html
@@ -35,4 +35,6 @@ The most successful models were generated using M5P, a combination of decision t
     <img class="one" style='text-align: center; height: 100%; width: 100%; object-fit: contain' src="https://github.com/MikhailTodes/Machine_Learning_Baseball/blob/gh-pages/public/images/base_res_compar.png?raw=true">
 </div>
 
+<a align='center' href="http://mikhailtodes.github.io/Machine_Learning_Baseball/report/" target="_blank">Full Report</a>
+
 </main>
